[tool.poetry]
name = "boardgen"
version = "0.5.2"
description = "Board pinout diagram generator"
authors = ["Kuba Szczodrzyński <kuba@szczodrzynski.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
click = "^8.1.3"
svgwrite = "^1.4.2"
devtools = "^0.8.0"
natsort = "^8.2.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[tool.poetry.scripts]
boardgen = "boardgen.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
