[tool.poetry]
name = "boardgen"
version = "0.8.2"
description = "Board pinout diagram generator (with ltchiptool plugin GUI editor)"
authors = ["Kuba Szczodrzyński <kuba@szczodrzynski.pl>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "boardgen" },
    { include = "ltctplugin/boardgen" },
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
click = "^8.1.3"
svgwrite = "^1.4.2"
devtools = "^0.8.0"
natsort = "^8.2.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[tool.poetry.scripts]
boardgen = "boardgen.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
